fix overlapping home cards

--- a/src/Scss/Home.scss
+++ b/src/Scss/Home.scss
@@ -13,13 +13,15 @@
         margin: 0 auto;
         // padding: 2% 0;
         display: grid;
-        grid-gap: 4%;
+        // grid-gap: 4%;
         grid-template-columns: repeat(auto-fill, 275px);
         // background-color: rgb(255, 214, 240);
         justify-content: space-around;
         .home-project-card{
+            // padding: 4% 0;
+            margin: 4% 0;
             height: 275px;
-            background-color: rgb(112, 112, 160);
+            // background-color: rgb(112, 112, 160);
             box-shadow: 2px 3px 8px rgb(119, 117, 117);
             border-radius: 5px;
             width: 100%;
